Fix remaining Sonar code smells (excluding too-many-parameters)
- Rename Period_ to LeakPeriod (class name must match ^[A-Z][a-zA-Z0-9]*$)
- LeakPeriodConfiguration: rename local var period_ to period
- ProjectBuilder: remove unused projectStatusWsRes assignment, extract
  nested try into fetchProjectComponent() to reduce cognitive complexity,
  remove unnecessary throws ReportException from private methods whose
  callees don't throw it; remove unused IOException/Qualitygates imports
- MeasuresBuilder: remove unused IOException import; remove unnecessary
  throws ReportException from addAllMeasuresFromDocument
- SonarIssuesDumper: extract duplicate string literals into constants
- MetricKeys.getAllMetricKeys: return expression directly, drop temp var
- FileUploader: replace deprecated new URL(...) with URI.create().toURL()
- EventsTest/TocTest: remove unnecessary throws declarations from @Test
  methods that cannot actually throw the declared exception
- FileUploaderTest: remove unused FileWriter import
- ProjectTest: remove unused List import
- PDFGeneratorTest: remove unused reportType param from helper method

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>